Fix input size and overflow on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -59,13 +59,13 @@ p {
 
 /* Formatacao do header#cabecalho */
 header#cabecalho {
-	width: 100%;
+	width: fit-content;
+	margin: 0 auto;
 	margin-top: 5%;
 }
 
 div.cabecalho-inner {
 	width: 26.25rem;
-	margin: 0 auto;
 }
 
 .cabecalho-inner h1 {
@@ -243,9 +243,10 @@ div#card-done ul {
 
 /* Footer */
 footer {
-	width: 100%;
 	position: fixed;
 	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
 footer p {
@@ -270,6 +271,10 @@ footer p a:hover {
 
 /* Para dispositivos menores que 1024px para baixo */
 @media only screen and (max-width: 1024px) {
+	header#cabecalho {
+		margin-top: 2.5rem;
+	}
+
 	div#interface-geral {
 		width: 26.25rem;
 		min-width: 26.25rem;
@@ -281,6 +286,18 @@ footer p a:hover {
 		margin: 0 auto;
         flex-direction: column;
         flex-wrap: nowrap;
+	}
+
+	.cabecalho-inner div.container-add-tarefa {
+		width: 280px;
+	}
+
+	.container-add-tarefa input.input-add-tarefa {
+		width: 238px;
+	}
+
+	.container-add-tarefa .btn-add-tarefa {
+		right: 0px;
 	}
 	
 	footer {
